[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-21.png" type="Texture" id=1]
[ext_resource path="res://src/ui/UILayer.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-23.png" type="Texture" id=4]
[ext_resource path="res://assets/theme.tres" type="Theme" id=5]
[ext_resource path="res://src/ui/Alert.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/tank-battle.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/info.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-20.png" type="Texture" id=25]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-24.png" type="Texture" id=26]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-22.png" type="Texture" id=35]

[node name="UILayer" type="CanvasLayer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 1456.0, 456.0, 960.0 ]
}
_info_button = NodePath("Overlay/HBoxContainer/InfoButton")
_setting_button = NodePath("Overlay/HBoxContainer/SettingButton")
_sound_on_button = NodePath("Overlay/HBoxContainer/SoundOnButton")
_sound_off_button = NodePath("Overlay/HBoxContainer/SoundOffButton")
_home_button = NodePath("Overlay/HBoxContainer/HomeButton")
_back_button = NodePath("Overlay/HBoxContainer/BackButton")

[node name="Screens" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Overlay" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cover" type="ColorRect" parent="Overlay"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Message" type="Label" parent="Overlay"]
visible = false
margin_right = 3840.0
margin_bottom = 216.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Waiting for players..."
align = 1
clip_text = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Overlay"]
margin_top = -24.0
margin_right = 1896.0
margin_bottom = 206.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoButton" type="Button" parent="Overlay/HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 1763.0
margin_right = 1896.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 7 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingButton" type="Button" parent="Overlay/HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 1763.0
margin_right = 1896.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 7 )
icon = ExtResource( 25 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundOnButton" type="Button" parent="Overlay/HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 1763.0
margin_right = 1896.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 7 )
icon = ExtResource( 35 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundOffButton" type="Button" parent="Overlay/HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 1763.0
margin_right = 1896.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 7 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="Button" parent="Overlay/HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 1627.0
margin_right = 1759.32
margin_bottom = 230.534
custom_fonts/font = ExtResource( 7 )
icon = ExtResource( 26 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Overlay/HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 1763.0
margin_right = 1896.32
margin_bottom = 230.534
custom_fonts/font = ExtResource( 7 )
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alert" parent="Overlay" instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="Overlay/HBoxContainer/InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="Overlay/HBoxContainer/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="Overlay/HBoxContainer/SoundOnButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="Overlay/HBoxContainer/SoundOffButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="Overlay/HBoxContainer/HomeButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Overlay/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="completed" from="Overlay/Alert" to="." method="_on_Alert_completed"]
